--- a/source/AltairFix.vcxproj
+++ b/source/AltairFix.vcxproj
@@ -163,11 +163,13 @@
     <ClCompile Include="Constants.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="WindowedMode.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Config.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Logger.h" />
+    <ClInclude Include="WindowedMode.h" />
   </ItemGroup>
   <ItemGroup>
     <CopyFileToFolders Include="AltairFix.ini">
