chore: Added Logging Level control & used relative paths

--- a/source/AltairFix.ini
+++ b/source/AltairFix.ini
@@ -20,3 +20,7 @@ WindowPosY=-1
 ; Enable debug logging
 ; 0 - off, 1 - on
 EnableLogging=1
+
+; Log Level
+; 0 - trace, 1 - debug, 2 - info, 3 - warn, 4 - err, 5 - critical, 6 - off
+LogLevel=2
