--- a/.github/workflows/build_stable.yml
+++ b/.github/workflows/build_stable.yml
@@ -19,6 +19,13 @@ jobs:
         with:
           submodules: recursive
           fetch-depth: 0
+          fetch-tags: true
+
+      - name: Configure Git
+        run: |
+          git config --global user.email "78475878+shazzaam7@users.noreply.github.com"
+          git config --global user.name "Shazzaam7"
+          git fetch --tags --force
 
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v2
