--- a/.github/workflows/build_experimental.yml
+++ b/.github/workflows/build_experimental.yml
@@ -3,8 +3,10 @@ name: Build and upload artifact on push
 on:
   push:
     branches:
-      - "main"   # run on all branches, or set to "main" if you only want main
-
+      - "main" # run on all branches, or set to "main" if you only want main
+    paths-ignore:
+      - "README.md"
+      
 jobs:
   build:
     runs-on: windows-latest
