feat: Added `HighCoreCountFix`
Limits the game to not use more than 32 cores (Only useful for CPUs with
more than 32 cores)

--- a/source/AltairFix.ini
+++ b/source/AltairFix.ini
@@ -17,6 +17,10 @@ WindowPosX=-1
 WindowPosY=-1
 
 [Misc]
+; Limit CPU affinity to the first 31 logical processors
+; 0 - disabled (default), 1 - enabled
+HighCoreCountFix=0
+
 ; Enable debug logging
 ; 0 - off, 1 - on
 EnableLogging=1
