--- a/source/AltairFix.vcxproj
+++ b/source/AltairFix.vcxproj
@@ -167,6 +167,7 @@
   <ItemGroup>
     <ClCompile Include="Config.cpp" />
     <ClCompile Include="Constants.cpp" />
+    <ClCompile Include="CpuLimiter.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="WindowedMode.cpp" />
@@ -174,6 +175,7 @@
   <ItemGroup>
     <ClInclude Include="Config.h" />
     <ClInclude Include="Constants.h" />
+    <ClInclude Include="CpuLimiter.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="WindowedMode.h" />
   </ItemGroup>
