--- a/source/AltairFix.vcxproj
+++ b/source/AltairFix.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="Config.cpp" />
     <ClCompile Include="Constants.cpp" />
     <ClCompile Include="CpuLimiter.cpp" />
+    <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="WindowedMode.cpp" />
@@ -176,6 +177,7 @@
     <ClInclude Include="Config.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="CpuLimiter.h" />
+    <ClInclude Include="Engine.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="WindowedMode.h" />
   </ItemGroup>
