feat: Ubisoft ServerBlocker
Blocks the game from sending data to dead Ubisoft server
`gconnect.ubi.com`

--- a/source/AltairFix.ini
+++ b/source/AltairFix.ini
@@ -21,6 +21,10 @@ WindowPosY=-1
 ; 0 - disabled (default), 1 - enabled
 HighCoreCountFix=0
 
+; Blocks the game from sending data to dead Ubisoft servers, fixing stutters
+; 0 - disabled, 1 - enabled (default)
+ServerBlocker=1
+
 ; Enable debug logging
 ; 0 - off, 1 - on
 EnableLogging=1
