--- a/source/AltairFix.vcxproj
+++ b/source/AltairFix.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="ServerBlocker.cpp" />
     <ClCompile Include="WindowedMode.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -179,6 +180,7 @@
     <ClInclude Include="CpuLimiter.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Logger.h" />
+    <ClInclude Include="ServerBlocker.h" />
     <ClInclude Include="WindowedMode.h" />
   </ItemGroup>
   <ItemGroup>
