--- a/source/AltairFix.ini
+++ b/source/AltairFix.ini
@@ -1,37 +1,52 @@
 [Metadata]
-Version=0.2.0
+Version=0.2.1
 
 [Display]
 ; Window mode configuration
-; 0 - Normal (no changes)
-; 1 - Borderless fullscreen
-; 2 - Windowed mode
-; Default - 0
+; 0 = Normal (no changes)
+; 1 = Borderless fullscreen  
+; 2 = Windowed mode
+; Default: 0
 WindowMode=1
 
-; Custom window size (only used when WindowMode=2)
-; 0 means use game's default/current
+; Custom window size (only applies when WindowMode=2)
+; Set to 0 to use game's default resolution
+; Default: 1280x720
 WindowWidth=1280
 WindowHeight=720
 
-; Custom window position (only used when WindowMode=2)
-; -1 centers the window
+; Window position (only applies when WindowMode=2)
+; Set to -1 to center the window on screen
+; Default: -1 (centered)
 WindowPosX=-1
 WindowPosY=-1
 
-[Misc]
-; Limit CPU affinity to the first 31 logical processors
-; 0 - disabled (default), 1 - enabled
+[Tweaks]
+; CPU Core Limit Fix
+; Limits CPU affinity to first 31 logical processors
+; Fixes issues with games that crash/hang on 32+ core CPUs
+; 0 = Disabled (default)
+; 1 = Enabled
 HighCoreCountFix=0
 
-; Blocks the game from sending data to dead Ubisoft servers, fixing stutters
-; 0 - disabled, 1 - enabled (default)
+; Server Connection Blocker
+; Blocks connections to defunct Ubisoft servers to prevent stuttering
+; 0 = Disabled
+; 1 = Enabled (default)
 ServerBlocker=1
 
+[Debug]
 ; Enable debug logging
-; 0 - off, 1 - on
+; 0 = Disabled
+; 1 = Enabled (default)
 EnableLogging=1
 
-; Log Level
-; 0 - trace, 1 - debug, 2 - info, 3 - warn, 4 - err, 5 - critical, 6 - off
+; Logging verbosity level
+; 0 = Trace (most verbose)
+; 1 = Debug
+; 2 = Info (default)
+; 3 = Warning
+; 4 = Error
+; 5 = Critical
+; 6 = Off
 LogLevel=2
